--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,8 +1,11 @@
 
-<h1> {{title}} </h1>
-<ul>
-    <li  *ngFor='let user of users'>
-        {{user.id}} : {{user.userName}}
-    </li>
+<app-nav> </app-nav>
 
-</ul>
+<div style="margin-top: 100px;" class="container">
+    <ul>
+        <li  *ngFor='let user of users'>
+            {{user.id}} : {{user.userName}}
+        </li>
+    
+    </ul>
+</div>
