add login persistance logic

--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -25,9 +25,9 @@
           </ul>
 
           <div  *ngIf="loggedIn" dropdown class="nav-item dropdown ml-auto">
-            <a class="nav-link dropdown-toggle" id="navbarDropdown" dropdownToggle role="button" >
+            <button class="nav-link btn btn-link dropdown-toggle" id="navbarDropdown" dropdownToggle role="button" >
               Welcome user
-            </a>
+            </button>
             <div *dropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a  class="dropdown-item" >Edit profile</a>
            
