--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
     <div class="container">
         <a class="navbar-brand" href="#">DatingApp</a>
@@ -25,9 +25,9 @@
           </ul>
 
           <div  *ngIf="loggedIn" dropdown class="nav-item dropdown ml-auto">
-            <button class="nav-link btn btn-link dropdown-toggle" id="navbarDropdown" dropdownToggle role="button" >
+            <a class="nav-link  dropdown-toggle" id="navbarDropdown" dropdownToggle role="button" >
               Welcome user
-            </button>
+            </a>
             <div *dropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a  class="dropdown-item" >Edit profile</a>
            
