--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,11 +1,5 @@
 
 <app-nav> </app-nav>
 
-<div style="margin-top: 100px;" class="container">
-    <ul>
-        <li  *ngFor='let user of users'>
-            {{user.id}} : {{user.userName}}
-        </li>
-    
-    </ul>
-</div>
+
+<app-home></app-home>
