--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,9 @@
 
 <app-nav> </app-nav>
 
+<div class="container"
+  style="margin-top:100px"
+>
+<router-outlet> </router-outlet>
+</div>
 
-<app-home></app-home>
