--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -2,16 +2,16 @@
 
 <div class="card mb-4">
     <div class="card-img-wrapper">
-        <img class="card-img-top" src="{{member.photoUrl}}" alt="{{member.knownAs}}"/>
+        <img class="card-img-top" src="{{member.photoUrl||'./assets/user.png'}}" alt="{{member.knownAs}}"/>
         <ul class="list-inline member-icons animate text-center">
             <li class="list-inline-item">
-         <button class="btn btn-info">
+         <button  [routerLink]="'/members/'+member.username" class="btn btn-info">
              <i class="fa fa-user"></i>
          </button>
 
             </li>
             <li class="list-inline-item">
-                <button class="btn btn-info">
+                <button    class="btn btn-info">
                     <i class="fa fa-heart"></i>
                 </button>
        
