--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -1,7 +1,7 @@
 
 
 <div class="row">
-    <div  *ngFor="let member of members"class="col-2">
+    <div  *ngFor="let member of members$ | async"class="col-2">
         <app-member-card [member]="member"></app-member-card>
     </div>
 </div>
