--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -33,7 +33,7 @@
              Welcome {{user.username | titlecase}}
             </a>
             <div *dropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a  class="dropdown-item" >Edit profile</a>
+              <a  class="dropdown-item" routerLink="/member/edit" >Edit profile</a>
            
               <div class="dropdown-divider"></div>
               <a  class="dropdown-item" (click)="logout()" >Logout</a>
