create photo upload functionality

--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -80,7 +80,10 @@
             
             
             <tab heading='Edit Photos'>
-                <p>edit photos will go here</p>
+                <app-photo-editor [member]="member"> 
+
+
+                </app-photo-editor>
                 
             </tab>
 
