--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -29,7 +29,8 @@
           </ul>
 
           <div  *ngIf="(accountService.currentUser$ | async) as user" dropdown class="nav-item dropdown ml-auto">
-            <a class="nav-link  dropdown-toggle" id="navbarDropdown" dropdownToggle role="button" >
+            <a class="nav-link mx-2 dropdown-toggle" id="navbarDropdown" dropdownToggle role="button" >
+              <img src="{{user.photoUrl}}" alt="{{user.username}}">
              Welcome {{user.username | titlecase}}
             </a>
             <div *dropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdown">
