--- a/client/src/app/members/photo-editor/photo-editor.component.html
+++ b/client/src/app/members/photo-editor/photo-editor.component.html
@@ -13,8 +13,11 @@
                (click)="setMainPhoto(photo)"
                [ngClass]='photo.isMain ? "btn-success active":"btn-outline-success"'
                class="btn btn-sm"> Main</button>
-               <button class="btn btn-sm btn-danger">
-                   <i  (click)="deletePhoto(photo)"  class="fa fa-trash"></i>
+               <button  (click)="deletePhoto(photo)" 
+               [disabled]="photo.isMain"
+               
+               class="btn btn-sm btn-danger">
+                   <i   class="fa fa-trash"></i>
                </button>
            </div>
 
