add client side validations Reactive Forms

--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,10 +1,66 @@
-<form autocomplete="off" #registerForm="ngForm" (ngSubmit)="register()">
+<form autocomplete="off" [formGroup]="registerForm" (ngSubmit)="register()">
 <h1 class="text-center text-primary"> Sign up</h1>
 <hr>
+
 <div class="form-group">
-<input  [(ngModel)]="model.username" name="username" placeholder="username" type="text" class="form-control my-2">
-<input  [(ngModel)]="model.password" name="username" placeholder="password" type="password" class="form-control">
+   <label style="margin-right: 10px;" class="control-label">
+     I am a : 
+   </label>
+   <label  class="radio-inline">
+
+      <input type="radio" value="male"  formControlName="gender"> Male
+
+   </label>
+
+   <label  class="radio-inline">
+
+      <input class="ml-2" type="radio" value="female"  formControlName="gender"> Female
+
+   </label>
 </div>
+
+<app-text-input
+ [formControl]="registerForm.controls['username']"
+ [label]="'Username'"
+ >
+</app-text-input>
+<app-text-input
+ [formControl]="registerForm.controls['knownAs']"
+ [label]="'Known As'"
+ >
+</app-text-input>
+
+<app-date-input
+ [formControl]="registerForm.controls['dateOfBirth']"
+ [label]="'Birthday'"
+ [maxDate]="maxDate"
+ >
+</app-date-input>
+<app-text-input
+ [formControl]="registerForm.controls['city']"
+ [label]="'city'"
+ >
+</app-text-input>
+<app-text-input
+ [formControl]="registerForm.controls['country']"
+ [label]="'country'"
+ >
+</app-text-input>
+<app-text-input
+ [formControl]="registerForm.controls['password']"
+ [label]="'Password'"
+ [type] ="'password'"
+ >
+</app-text-input>
+
+<app-text-input
+ [formControl]="registerForm.controls['confirmPassword']"
+ [label]="'Confirm password'"
+ [type] ="'password'"
+ >
+</app-text-input>
+
+
 <div class="form-group text-center">
     <button class="btn btn-success mr-2" type="submit"> Register</button>
     <button class="btn btn-secondary mr-2" type="button" (click)="cancel()"> Cancel</button>
