--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,4 +1,4 @@
-<form autocomplete="off" [formGroup]="registerForm" (ngSubmit)="register()">
+<form autocomplete="off" [formGroup]="registerForm"  (ngSubmit)=" registerForm.valid && register()">
 <h1 class="text-center text-primary"> Sign up</h1>
 <hr>
 
@@ -60,9 +60,16 @@
  >
 </app-text-input>
 
+<div class="row ">
+   <ul class="text-danger">
+  <li *ngFor="let error of validationErrors">
+     {{error}}
+  </li>
+   </ul>
+</div>
 
 <div class="form-group text-center">
-    <button class="btn btn-success mr-2" type="submit"> Register</button>
+    <button [disabled]="!registerForm.valid" class="btn btn-success mr-2" type="submit"> Register</button>
     <button class="btn btn-secondary mr-2" type="button" (click)="cancel()"> Cancel</button>
 </div>
 </form>
