add filtring and sorting angular

--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -28,10 +28,10 @@
     </div>
 
     <div class="card-body p-1">
-        <h3 class="card-title text-center mb-1">
-            <i class="fa fa-user mr-2"></i>
-            {{member.knownAs}}
-        </h3>
+        <h5 class="card-title text-center mb-1">
+            <i class="fa fa-user mr-1"></i>
+            {{member.knownAs}},{{member.age}}
+        </h5>
         <p class="card-text text-muted Text-center">
            {{member.city}}  
         </p>
