--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -16,11 +16,11 @@
 </div>
 <div>
     <strong> Last Active:</strong>
-    <p> {{member.lastActive | date}}</p>
+    <p> {{member.lastActive | timeago}}</p>
 </div>
 <div>
     <strong> Member Since:</strong>
-    <p> {{member.created | date}}</p>
+    <p> {{member.created | date :'dd MMM yyyy'}}</p>
 </div>
 
 
