--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -11,7 +11,7 @@
 
             </li>
             <li class="list-inline-item">
-                <button    class="btn btn-info">
+                <button  (click)="addLike(member)" class="btn btn-info">
                     <i class="fa fa-heart"></i>
                 </button>
        
