--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -32,11 +32,11 @@
 </div>
 <div>
     <strong> Last Active:</strong>
-    <p> {{member.lastActive | date}}</p>
+    <p> {{member.lastActive |timeago}}</p>
 </div>
 <div>
     <strong> Member Since:</strong>
-    <p> {{member.created | date}}</p>
+    <p> {{member.created | date:'dd MMM yyyy'}}</p>
 </div>
 
 
