--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -5,19 +5,19 @@
         <img class="card-img-top" src="{{member.photoUrl||'./assets/user.png'}}" alt="{{member.knownAs}}"/>
         <ul class="list-inline member-icons animate text-center">
             <li class="list-inline-item">
-         <button  [routerLink]="'/members/'+member.username" class="btn btn-info">
+         <button  [routerLink]="'/members/'+member.username" class="btn  btn-sm btn-primary">
              <i class="fa fa-user"></i>
          </button>
 
             </li>
             <li class="list-inline-item">
-                <button  (click)="addLike(member)" class="btn btn-info">
-                    <i class="fa fa-heart"></i>
+                <button  (click)="toggleLike(member)" class="btn btn-primary btn-sm">
+                    <i   class="fa fa-heart"></i>
                 </button>
        
                    </li>
                    <li class="list-inline-item">
-                    <button class="btn btn-info">
+                    <button class="btn btn-primary btn-sm">
                         <i class="fa fa-envelope"></i>
                     </button>
            
