finishing messaging functionality

--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -17,7 +17,10 @@
        
                    </li>
                    <li class="list-inline-item">
-                    <button class="btn btn-primary btn-sm">
+                    <button
+                    routerLink='/members/{{member.username}}'
+                    [queryParams]='{tab:3}'
+                    class="btn btn-primary btn-sm">
                         <i class="fa fa-envelope"></i>
                     </button>
            
