--- a/client/src/app/lists/lists.component.html
+++ b/client/src/app/lists/lists.component.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="row mt-3">
-            <div class="col-2" *ngFor="let member of members" >
+            <div class=" col-md-3 col-lg-2 col-sm-6" *ngFor="let member of members" >
                 <app-member-card [member]="member"></app-member-card>
             </div>
 
